<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gate365</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_l">Login</string>
    <string name="go">Go</string>
    <string name="login_U">LOGIN</string>
    <string name="journeys">JOURNEYS</string>
    <string name="journey_details">JOURNEY DETAILS</string>
    <string name="travel_alerts">TRAVEL ALERTS</string>
    <string name="travel_advices">TRAVEL ADVICES</string>
    <string name="country_risk">COUNTRY RISK</string>
    <string name="travel_tips">TRAVEL TIPS</string>
    <string name="settings">SETTINGS</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_close">Close</string>
    <string name="menu_refresh">Refresh</string>
    <string name="pls_enter_username">Please enter username</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="invalid_username_pass">Invalid username or password</string>
    <string name="no_internet_avaialbe">Make sure your internet connection is available</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="login_failed">Login failed</string>
    <string name="load_failed">Load failed</string>
    <string name="destinations">DESTINATIONS</string>
    <string name="flight_routing">FLIGHT ROUTING</string>    
    <string name="you_no_journeys">You have no journeys</string>    
    <string name="there_no_alerts">No Travel Alerts</string>
    <string name="there_no_risks">No travel risks for this country</string>
    <string name="there_no_tips">No travel tips for this country</string>
    <string name="could_not_connect_server">Could not connect to the server. Please make sure your internet connection is available</string>
    <string name="alert_details">ALERT DETAILS</string>
    <string name="alert_details_content_ex">A nurse who cared for Ebola patients in Sierra Leone is fighting the US state of Maine over its right to quarantine her against her will. In a test case for returning US health workers, Kaci Hickox has vowed to leave her home on Thursday if the state does not lift the restrictions. President Barack Obama has been sharply critical of isolation being forced on people he says are American heroes. Almost 5,000 people have died from the Ebola virus, mostly in West Africa. On Thursday, US ambassador to the United Nations Samantha Power is expected to call for a stronger international response when she meets EU officials in Brussels. She has been visiting the countries most affected - Guinea, Sierra Leone and Liberia - to show US support, as well as Ghana, where the United Nations Mission for Ebola Emergency Response is based. The infection last week of a doctor in New York who had returned from Guinea has sparked a debate in the US over isolation policies for people coming back from West Africa.  Dr Craig Spencer had travelled on the subway and been bowling the night before he developed a fever, which is the point when people become contagious. The governors of New York and New Jersey introduced mandatory quarantines as a result, and Ms Hickox was outraged to be put in a tent in Newark on returning from Sierra Leone last Friday. A nurse who cared for Ebola patients in Sierra Leone is fighting the US state of Maine over its right to quarantine her against her will. In a test case for returning US health workers, Kaci Hickox has vowed to leave her home on Thursday if the state does not lift the restrictions. President Barack Obama has been sharply critical of isolation being forced on people he says are American heroes. Almost 5,000 people have died from the Ebola virus, mostly in West Africa. On Thursday, US ambassador to the United Nations Samantha Power is expected to call for a stronger international response when she meets EU officials in Brussels. She has been visiting the countries most affected - Guinea, Sierra Leone and Liberia - to show US support, as well as Ghana, where the United Nations Mission for Ebola Emergency Response is based. The infection last week of a doctor in New York who had returned from Guinea has sparked a debate in the US over isolation policies for people coming back from West Africa.  Dr Craig Spencer had travelled on the subway and been bowling the night before he developed a fever, which is the point when people become contagious. The governors of New York and New Jersey introduced mandatory quarantines as a result, and Ms Hickox was outraged to be put in a tent in Newark on returning from Sierra Leone last Friday. A nurse who cared for Ebola patients in Sierra Leone is fighting the US state of Maine over its right to quarantine her against her will. In a test case for returning US health workers, Kaci Hickox has vowed to leave her home on Thursday if the state does not lift the restrictions. President Barack Obama has been sharply critical of isolation being forced on people he says are American heroes. Almost 5,000 people have died from the Ebola virus, mostly in West Africa. On Thursday, US ambassador to the United Nations Samantha Power is expected to call for a stronger international response when she meets EU officials in Brussels. She has been visiting the countries most affected - Guinea, Sierra Leone and Liberia - to show US support, as well as Ghana, where the United Nations Mission for Ebola Emergency Response is based. The infection last week of a doctor in New York who had returned from Guinea has sparked a debate in the US over isolation policies for people coming back from West Africa.  Dr Craig Spencer had travelled on the subway and been bowling the night before he developed a fever, which is the point when people become contagious. The governors of New York and New Jersey introduced mandatory quarantines as a result, and Ms Hickox was outraged to be put in a tent in Newark on returning from Sierra Leone last Friday. A nurse who cared for Ebola patients in Sierra Leone is fighting the US state of Maine over its right to quarantine her against her will. In a test case for returning US health workers, Kaci Hickox has vowed to leave her home on Thursday if the state does not lift the restrictions. President Barack Obama has been sharply critical of isolation being forced on people he says are American heroes. Almost 5,000 people have died from the Ebola virus, mostly in West Africa. On Thursday, US ambassador to the United Nations Samantha Power is expected to call for a stronger international response when she meets EU officials in Brussels. She has been visiting the countries most affected - Guinea, Sierra Leone and Liberia - to show US support, as well as Ghana, where the United Nations Mission for Ebola Emergency Response is based. The infection last week of a doctor in New York who had returned from Guinea has sparked a debate in the US over isolation policies for people coming back from West Africa.  Dr Craig Spencer had travelled on the subway and been bowling the night before he developed a fever, which is the point when people become contagious. The governors of New York and New Jersey introduced mandatory quarantines as a result, and Ms Hickox was outraged to be put in a tent in Newark on returning from Sierra Leone last Friday.</string>
    <string name="there_no_advices">There is no advices</string>
    <string name="INSIGNIFICANT">Insignificant</string>
    <string name="LOW">Low</string>
    <string name="MEDIUM">Medium</string>
    <string name="HIGH">High</string>
    <string name="EXTREME">Extreme</string>
    <string name="departs">Departs</string>
    <string name="arrives">Arrives</string>
    <string name="loading_pls_wait">Loading, please wait...</string>
    <string name="logging_pls_wait">Logging, please wait...</string>
    <string name="enable_location_tracking">Enable location tracking</string>
    <string name="frequency">Frequency</string>
    <string name="last_time">Last time</string>
    <string name="last_lattitude">Last latitude</string>
    <string name="last_longtitude">Last longtitude</string>
    <string name="seconds">seconds</string>
    <string name="exit_app">Exit application</string>
    <string name="are_you_sure_exit_app">Are you sure you want to exit the application?</string>
    <string name="logout">Logout</string>
    <string name="never_sent">Never sent</string>
    
</resources>