<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/titlebar"/>
    
    <include layout="@layout/header"/>
    
    <com.travel.gate365.view.widget.FontableCheckBox android:id="@id/chk_gpstracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CommonCheckboxStyle"
        android:text="@string/enable_location_tracking"/>
    
    <com.travel.gate365.view.widget.FontableTextView android:id="@id/txt_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CommonTextViewStyle"
        android:padding="5dp"
        android:text="@string/frequency"/>
    
    <com.travel.gate365.view.widget.FontableTextView android:id="@id/txt_last_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CommonTextViewStyle"
        android:padding="5dp"
        android:text="@string/last_time"/>
    
    <com.travel.gate365.view.widget.FontableTextView android:id="@id/txt_last_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CommonTextViewStyle"
        android:padding="5dp"
        android:text="@string/last_lattitude"/>
    
    <com.travel.gate365.view.widget.FontableTextView android:id="@id/txt_last_longtitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CommonTextViewStyle"
        android:padding="5dp"
        android:text="@string/last_longtitude"/>
    
    <com.travel.gate365.view.widget.FontableButton android:id="@id/btn_logout" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:minWidth="@dimen/min_common_button_width"
        android:text="@string/logout"
        android:onClick="onLogoutButtonHandler"
        style="@style/CommonButtonStyle"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"/>
    
</LinearLayout>
