<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gate365Activity">
    
    <include layout="@layout/header"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="5dp"
        android:orientation="vertical">

	    <com.travel.gate365.view.widget.FontableTextView android:id="@id/txt_username" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/CommonTextViewStyle" 
	        android:text="@string/username"/>

	    <com.travel.gate365.view.widget.FontableEditText android:id="@id/edt_username" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/CommonEditTextStyle"
	        android:minWidth="@dimen/min_common_edittext_width"/>
	    	    
	    <com.travel.gate365.view.widget.FontableTextView android:id="@id/txt_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        style="@style/CommonTextViewStyle" 
	        android:text="@string/password"/>
	    	    
	    <com.travel.gate365.view.widget.FontableEditText android:id="@id/edt_password" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/CommonEditTextStyle" 
	        android:minWidth="@dimen/min_common_edittext_width"/>

	    <com.travel.gate365.view.widget.FontableButton android:id="@id/btn_login" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:minWidth="@dimen/min_common_button_width"
	        android:text="@string/login_l"/>
	    	    	    	    
	    </LinearLayout>
    

</RelativeLayout>